--- a/app/main/views/partner/partner.add.html
+++ b/app/main/views/partner/partner.add.html
@@ -80,7 +80,7 @@
             <div class="form-group">
                 <!-- <label class="control-label col-md-3 col-sm-3 col-xs-12"></label> -->
                 <label class="control-label col-md-6 col-sm-6 col-xs-12 col-md-offset-3" data-toggle="collapse" data-target="#create_partner_contact" class="cursor">
-                    <i class="fa fa-plus"></i> Thêm người kí
+                    <i class="fa fa-plus"></i> Thêm liên hệ
                 </label>
                 <!-- <div class="col-md-6 col-sm-6 col-xs-12">
                                 <angucomplete-alt id="findpartner" placeholder="Tìm kiếm đối tác" pause="100" selected-object="selectedFindPartnerId" local-data="allPartner" search-fields="partnerName" title-field="partnerName" minlength="1" input-class="form-control" />
@@ -175,7 +175,7 @@
                     </tbody>
                     <thead ng-if="recentCreatedPartner.partnerContacts.length != 0">
                         <tr>
-                            <th> Đầu mối đối tác </th>
+                            <th> Tên liên hệ </th>
                             <th> Mã </th>
                             <th> </th>
                         </tr>
@@ -315,7 +315,7 @@
         <div class="form-group">
             <label class="control-label col-md-3 col-sm-3 col-xs-12">Ngày thành lập: </label>
             <div class="col-md-6 col-sm-6 col-xs-12">
-                <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.birthday">
+                <input class="date-picker form-control col-md-7 col-xs-12" type="date" ng-model="input.birthday">
             </div>
         </div>
         <div class="form-group">
@@ -346,7 +346,7 @@
         <div class="form-group">
             <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12"></label>
             <div class="col-md-6 col-sm-6 col-xs-12">
-                <h4 class="control-label col-md-7 col-xs-12 cursor" data-toggle="collapse" data-target="#add_contact"> Thêm đầu mối đối tác</h4>
+                <h4 class="control-label col-md-7 col-xs-12 cursor" data-toggle="collapse" data-target="#add_contact"> Thêm liên hệ đối tác</h4>
             </div>
         </div>
         <div class="collapse" id="add_contact">
