--- a/app/main/views/partner/partner.information.html
+++ b/app/main/views/partner/partner.information.html
@@ -40,7 +40,7 @@
     <div class="form-group">
         <label class="control-label col-md-4 col-sm-4 col-xs-12">Ngày thành lập</label>
         <div class="col-md-6 col-sm-6 col-xs-12">
-            <input class="form-control col-md-7 col-xs-12" type="text" ng-model="Partner.birthday">
+            <input class="form-control col-md-7 col-xs-12" type="date" ng-model="Partner.birthday" value="{{Partner.birthday}}">
         </div>
     </div>
     <div class="form-group">
