--- a/app/main/views/contract/contract.add.html
+++ b/app/main/views/contract/contract.add.html
@@ -232,9 +232,33 @@
                     <angucomplete-alt id="findUetMan" placeholder="Tìm kiếm người kí {{user.rolesAndSigningLevel.name}}" pause="100" selected-object="selectedUetMan" local-data="allUetMan" search-fields="uetManName" title-field="uetManName" minlength="1" input-class="form-control" />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-init="getAllRolesAndSigningLevel()" ng-if="role == 'ADMIN_VNU'">
                 <label class="control-label col-md-4 col-sm-4 col-xs-12">
-                    <!-- Đơn vị theo dõi:  -->
+                </label>
+                <div class="col-md-3 col-sm-3 col-xs-12">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th> Đơn vị theo dõi </th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="university in allRolesAndSigningLevel" class="cursor" ng-click="university.checked=! university.checked" id="university_share_contract_{{university.id}}" style="background-color: white;" ng-if="university.id != id">
+                                <!-- <th scope="row">{{university.id}}</th> -->
+                                <td>{{university.universityName}}</td>
+                                <td class="a-center university_share_contract_{{university.id}}">
+                                    <!-- <i class="fa fa-check-square-o" ng-if="university.checked==true"></i> -->
+                                    <!-- <i class="fa fa-square-o" ng-if="university.checked !=true"></i> -->
+                                    <i class="fa" ng-class="{'fa-square-o' : university.checked !=true, 'fa-check-square-o' : university.checked==true}"></i>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="form-group" ng-if="role == 'ADMIN_UNIT' || role == 'UNIT'">
+                <label class="control-label col-md-4 col-sm-4 col-xs-12">
                 </label>
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <table class="table table-striped">
@@ -252,7 +276,7 @@
                                     <!-- <i class="fa fa-check-square-o" ng-if="unitName.checked==true"></i> -->
                                     <!-- <i class="fa fa-square-o" ng-if="unitName.checked !=true"></i> -->
                                     <i class="fa" ng-class="{'fa-square-o' : unitName.checked !=true, 'fa-check-square-o' : unitName.checked==true}"></i>
-                                </td> 
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -324,6 +348,18 @@
                         <option value="{{child.id}}" ng-repeat="child in user.rolesAndSigningLevel.child">{{child.name}}</option>
                     </select>
                 </div>
+            </div>
+            <!-- <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Tự động renew: </label>
+                <label class="control-label col-md-1 col-sm-1 col-xs-12" for="last-name">Có <i class="fa fa-check-circle-o" ng-class="{'fa-check-circle-o'}"></i></label>
+                <label class="control-label col-md-1 col-sm-1 col-xs-12" for="last-name">Không <i class="fa fa-circle-o"></i></label> -->
+            <div class="form-group">
+                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Tự động renew: </label>
+                <label class="control-label col-md-2 col-sm-1 col-xs-12" for="co">Có
+                    <input type="radio" name="renew" id="co" value="true" ng-model="input.renew">
+                </label>
+                <label class="control-label col-md-2 col-sm-1 col-xs-12" for="khong">Không
+                    <input type="radio" name="renew" id="khong" value="false" ng-model="input.renew">
+                </label>
             </div>
             <div class="form-group">
                 <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Giá trị HĐ: </label>
